# django-graphene-m2m

./: README.md  README.me  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
app/core/: models.py  schema.py
app/core/migrations/: 0001_initial.py
